[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning:tifffile",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if display",
    "if display_test",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
